few bug fixes picked up by findbugs